plex/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex

  template:
    metadata:
      labels:
        app: plex
    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex
        - name: nas
          nfs:
            server: diskstation
            path: /volume1/media
      containers:
        - name: plex
          image: plexinc/pms-docker
          imagePullPolicy: Always
          volumeMounts:
            - name: nas
              mountPath: /mnt/nas
            - name: config
              mountPath: /config
          ports:
            - containerPort: 32400
