plex/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  ports:
  - port: 80
    targetPort: 32400
  selector:
    app: plex
  type: LoadBalancer
